[css-grid] Positioned items can be placed on the implicit grid

The old code wrongly assumed that positioned items couldn't be placed
on the implicit grid.
However, the spec doesn't mention anything about this.

The patch fixes this issue, so now positioned items can be actually
placed on the implicit tracks.
Updated the test to follow the expected behavior.

BUG=615630
TEST=fast/css-grid-layout/grid-positioned-items-within-grid-implicit-track.html

Review-Url: https://codereview.chromium.org/2021683002
Cr-Commit-Position: refs/heads/master@{#396711}

Former-commit-id: 5583f72362240b14f4f29facb90a24cd6a1ef516